--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
-  - crd.sam.test
+  - crd.devops.toolbox
   resources:
   - podtrackers
   verbs:
@@ -17,13 +17,13 @@ rules:
   - update
   - watch
 - apiGroups:
-  - crd.sam.test
+  - crd.devops.toolbox
   resources:
   - podtrackers/finalizers
   verbs:
   - update
 - apiGroups:
-  - crd.sam.test
+  - crd.devops.toolbox
   resources:
   - podtrackers/status
   verbs:
